<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background_tips"
    tools:context=".TipsActivity">

    <TableLayout
        android:id="@+id/table_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="16dp">

        <TextView
            android:id="@+id/tip1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_row"
            android:text="@string/tip1"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:id="@+id/tip2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_row"
            android:text="@string/tip2"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:id="@+id/tip3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_row"
            android:text="@string/tip3"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:id="@+id/tip4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_row"
            android:text="@string/tip4"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_small" />


        <TextView
            android:id="@+id/tip5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_row"
            android:text="@string/tip5"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_small" />


    </TableLayout>


</RelativeLayout>