<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_fback"
    android:orientation="vertical"
    tools:context=".AboutUsActivity">

    <ImageView
        android:id="@+id/img_about_us1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="22dp"
        android:src="@drawable/img_rateus1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_about_us1"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:text="@string/tv_feedback"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:layout_marginTop="5dp"
            android:text="@string/about_link"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:layout_marginTop="5dp"
            android:text="@string/about_email"
            android:textSize="20sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/img_about_us2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="right"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="0dp"
        android:src="@drawable/img_rateus2" />

</RelativeLayout>